Added polar.sh billing support
